--- a/templates/home.html
+++ b/templates/home.html
@@ -52,16 +52,16 @@
             You agree not to copy, modify, distribute, or create derivative works of any content available on this website without the prior written consent of [Your Company]. Unauthorized use may result in termination of your access and possible legal action.
             
             Disclaimer of Warranties:
-            THIS WEBSITE IS PROVIDED "AS IS" WITHOUT WARRANTY OF ANY KIND, WHETHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, OR NON-INFRINGEMENT. [Your Company] DOES NOT WARRANT THAT THE WEBSITE WILL BE UNINTERRUPTED, TIMELY, SECURE, OR ERROR-FREE.
+            THIS WEBSITE IS PROVIDED "AS IS" WITHOUT WARRANTY OF ANY KIND, WHETHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, OR NON-INFRINGEMENT. BokoLoko Inc. DOES NOT WARRANT THAT THE WEBSITE WILL BE UNINTERRUPTED, TIMELY, SECURE, OR ERROR-FREE.
             
             Limitation of Liability:
-            IN NO EVENT SHALL [YOUR COMPANY] BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, OR CONSEQUENTIAL DAMAGES ARISING OUT OF OR IN CONNECTION WITH THE USE OR INABILITY TO USE THIS WEBSITE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
+            IN NO EVENT SHALL BokoLoko Inc. BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, OR CONSEQUENTIAL DAMAGES ARISING OUT OF OR IN CONNECTION WITH THE USE OR INABILITY TO USE THIS WEBSITE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
             
             Changes to the Agreement:
             We reserve the right to modify this Agreement at any time without prior notice. Your continued use of this website after any modifications constitutes your acceptance of the new terms.
             
             Governing Law:
-            This Agreement shall be governed by and construed in accordance with the laws of [Your Jurisdiction]. Any disputes arising under or related in any way to this Agreement shall be subject to the exclusive jurisdiction of the courts located in [Your Jurisdiction].
+            This Agreement shall be governed by and construed in accordance with the laws of Texas. Any disputes arising under or related in any way to this Agreement shall be subject to the exclusive jurisdiction of the courts located in Texas.
             
             IF YOU DO NOT AGREE TO THE TERMS OF THIS AGREEMENT, PLEASE DO NOT ACCESS OR USE THIS WEBSITE.</p>
         </div>
